# Wazuh-MCP-Server

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  MCP_COMPLIANCE_VERIFICATION.md  README.md  WAZUH_COMPATIBILITY.md  compose.yml  pyproject.toml  requirements.txt
docs/: configuration.md
docs/api/: README.md  alerts.md  compliance-reporting.md  security-analysis.md
docs/security/: README.md
src/wazuh_mcp_server/: __init__.py  auth.py  config.py  config_validator.py  oauth.py  oidc.py  resilience.py  security.py  server.py
src/wazuh_mcp_server/api/: wazuh_client.py  wazuh_indexer.py
tests/integration/: test_business_logic.py
